<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.imzfz.calculator.MainActivity">

    <cn.imzfz.calculator.ShowView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="end"
        android:paddingTop="55dp"
        android:text="0"
        android:maxLines="1"
        android:maxLength="12"
        android:textColor="#ffffff"
        android:textSize="65sp" />

    <GridLayout
        android:id="@+id/keyboard"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:columnCount="4"
        android:background="#000000"
        >

        <cn.imzfz.calculator.KeyView
            android:id="@+id/ac"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tag1"
            android:background="#808080"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/plus_minus"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tag2"
            android:background="#808080"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/percent"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tag3"
            android:background="#808080"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/divide"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tag4"
            android:background="#E66B1A"
            android:textColor="#ffffff"
            android:layout_marginBottom="1dp"
            />

        <!-- ================================= -->
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num7"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num7"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num8"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num8"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num9"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num9"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/multiply"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tag5"
            android:background="#E66B1A"
            android:textColor="#ffffff"
            android:layout_marginBottom="1dp"
            />


        <!-- ================================= -->
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num4"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num5"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num6"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num6"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/minus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tag6"
            android:background="#E66B1A"
            android:textColor="#ffffff"
            android:layout_marginBottom="1dp"
            />


        <!-- ================================= -->
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num1"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num2"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num3"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/plus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tag7"
            android:background="#E66B1A"
            android:textColor="#ffffff"
            android:layout_marginBottom="1dp"
            />

        <!-- ================================= -->
        <cn.imzfz.calculator.KeyView
            android:id="@+id/num0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num0"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_columnSpan="2"
            />

        <cn.imzfz.calculator.KeyView
            android:id="@+id/dot"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tag9"
            android:background="#CCCCCC"
            android:textColor="#000000"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            />
        <cn.imzfz.calculator.KeyView
            android:id="@+id/is"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tag8"
            android:background="#E66B1A"
            android:textColor="#ffffff"
            android:layout_marginBottom="1dp"
            />

    </GridLayout>

</LinearLayout>
